--- a/public/style.css
+++ b/public/style.css
@@ -89,13 +89,34 @@ img{
     
     /* width: calc(100% / 3 + 10); */
 }
-#name{
-    font-size: 17px;
-    color: #00AFC1;
-}
+
 #textcontent{
     padding-left: 15px;
+    display: grid;
+grid-template-columns: repeat(5, 1fr);
+grid-template-rows: repeat(2, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+padding-right: 10px;
+/* grid-area: 1 / 1 / 3 / 6; */
+}
+#name{
+    /* font-size: 17px; */
+    color: #00AFC1;
+    grid-area: 1 / 1 / 2 / 5;
 }
 #tags{
     /* background-color: #F5F5F5; */
+    grid-area: 2 / 1 / 3 / 6;
+    color: black;
+}
+#pricetag{
+    grid-area: 1 / 5 / 2 / 6;
+    background-color: pink;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    padding: 0;
+    font-size: 25px;
 }
